--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     ],
     "env": {
         "SESSION_ID": {
-            "description": "cyber-x@;;;QAVyCIab#6pcVe0W4MypdzqOroDRTUQPdNZVXuhy5BJaZSmVcXbw",
+            "description": "cyber-x@;;;BAcBQYjb#-p0IQ1e9ElLAjr8jsyHnLt3H4audoobDhlqjN1royvU",
             "required": true,
             "value": ""
         },
