--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     ],
     "env": {
         "SESSION_ID": {
-            "description": "cyber-x@;;;BAcBQYjb#-p0IQ1e9ElLAjr8jsyHnLt3H4audoobDhlqjN1royvU",
+            "description": "cyber-x@;;;sMdXGRCB#ZE2Xy-9h_t6ExPtRhlVgEv-E5dVO_-uKf69k1wOL8uc",
             "required": true,
             "value": ""
         },
