--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     ],
     "env": {
         "SESSION_ID": {
-            "description": "cyber-x@;;;wUV2iTzL#LY_2D5BgB78sZIM9X-tDrgma6Bpforpfvc5X61u2dxM",
+            "description": "cyber-x@;;;VcVGHCKA#5bqrQa3-db_WG2b9MKIIdD-nwdA8vgZ9_iktOIFX9Ro",
             "required": true,
             "value": ""
         },
