--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     ],
     "env": {
         "SESSION_ID": {
-            "description": "cyber-x@;;;VcVGHCKA#5bqrQa3-db_WG2b9MKIIdD-nwdA8vgZ9_iktOIFX9Ro",
+            "description": "cyber-x@;;;VcdhxR4T#46Z39L2hBWLK7Hr4wKP1sMKGYtQhTP7Vulg8VAO5gU4",
             "required": true,
             "value": ""
         },
