--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     ],
     "env": {
         "SESSION_ID": {
-            "description": "cyber-x@;;;VcdhxR4T#46Z39L2hBWLK7Hr4wKP1sMKGYtQhTP7Vulg8VAO5gU4",
+            "description": "cyber-x@;;;dA8CXS6R#hmlJ2Ywk0p3WFg-a78cl4L5F47ZVQKM7AiQpQi0ftNM",
             "required": true,
             "value": ""
         },
